Added transitions and new menu page (WIP)

--- a/src/test.html
+++ b/src/test.html
@@ -13,6 +13,36 @@
 					<li><a href="#" id="about">About</a></li>
 				</ul>
 			</nav>
+			<div class="menu-content">
+				<div class="menu-card">
+					<img
+						class="menu-img"
+						src="./assets/images/33362787.png"
+						alt="Lasagna Bolognese"
+					/>
+				</div>
+				<div class="menu-card">
+					<img
+						class="menu-img"
+						src="./assets/images/33362787.png"
+						alt="Lasagna Bolognese"
+					/>
+				</div>
+				<div class="menu-card">
+					<img
+						class="menu-img"
+						src="./assets/images/33362787.png"
+						alt="Lasagna Bolognese"
+					/>
+				</div>
+				<div class="menu-card">
+					<img
+						class="menu-img"
+						src="./assets/images/33362787.png"
+						alt="Lasagna Bolognese"
+					/>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
