--- a/src/test.html
+++ b/src/test.html
@@ -20,6 +20,13 @@
 						src="./assets/images/33362787.png"
 						alt="Lasagna Bolognese"
 					/>
+					<div class="menu-item-text">
+						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<p class="menu-item-description">
+							Italian lasagna with bolognese sauce.
+						</p>
+						<p class="menu-item-price">$12</p>
+					</div>
 				</div>
 				<div class="menu-card">
 					<img
@@ -27,6 +34,13 @@
 						src="./assets/images/33362787.png"
 						alt="Lasagna Bolognese"
 					/>
+					<div class="menu-item-text">
+						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<p class="menu-item-description">
+							Italian lasagna with bolognese sauce.
+						</p>
+						<p class="menu-item-price">$12</p>
+					</div>
 				</div>
 				<div class="menu-card">
 					<img
@@ -34,6 +48,13 @@
 						src="./assets/images/33362787.png"
 						alt="Lasagna Bolognese"
 					/>
+					<div class="menu-item-text">
+						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<p class="menu-item-description">
+							Italian lasagna with bolognese sauce.
+						</p>
+						<p class="menu-item-price">$12</p>
+					</div>
 				</div>
 				<div class="menu-card">
 					<img
@@ -41,6 +62,13 @@
 						src="./assets/images/33362787.png"
 						alt="Lasagna Bolognese"
 					/>
+					<div class="menu-item-text">
+						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<p class="menu-item-description">
+							Italian lasagna with bolognese sauce.
+						</p>
+						<p class="menu-item-price">$12</p>
+					</div>
 				</div>
 			</div>
 		</div>
