--- a/src/test.html
+++ b/src/test.html
@@ -21,7 +21,7 @@
 						alt="Lasagna Bolognese"
 					/>
 					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<h1 class="menu-item-title">Lasagna Bolognese</h1>
 						<p class="menu-item-description">
 							Italian lasagna with bolognese sauce.
 						</p>
@@ -35,7 +35,7 @@
 						alt="Lasagna Bolognese"
 					/>
 					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<h1 class="menu-item-title">Lasagna Bolognese</h1>
 						<p class="menu-item-description">
 							Italian lasagna with bolognese sauce.
 						</p>
@@ -49,7 +49,7 @@
 						alt="Lasagna Bolognese"
 					/>
 					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<h1 class="menu-item-title">Lasagna Bolognese</h1>
 						<p class="menu-item-description">
 							Italian lasagna with bolognese sauce.
 						</p>
@@ -63,7 +63,7 @@
 						alt="Lasagna Bolognese"
 					/>
 					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagana Bolognese</h1>
+						<h1 class="menu-item-title">Lasagna Bolognese</h1>
 						<p class="menu-item-description">
 							Italian lasagna with bolognese sauce.
 						</p>
