Added about page, all pages are now populated

--- a/src/test.html
+++ b/src/test.html
@@ -13,62 +13,24 @@
 					<li><a href="#" id="about">About</a></li>
 				</ul>
 			</nav>
-			<div class="menu-content">
-				<div class="menu-card">
-					<img
-						class="menu-img"
-						src="./assets/images/33362787.png"
-						alt="Lasagna Bolognese"
-					/>
-					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagna Bolognese</h1>
-						<p class="menu-item-description">
-							Italian lasagna with bolognese sauce.
-						</p>
-						<p class="menu-item-price">$12</p>
+			<div class="about-container">
+				<div class="about-title-container">
+					<div class="about-title">
+						A<br />
+						B<br />
+						O<br />
+						U<br />
+						T<br />
 					</div>
 				</div>
-				<div class="menu-card">
-					<img
-						class="menu-img"
-						src="./assets/images/33362787.png"
-						alt="Lasagna Bolognese"
-					/>
-					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagna Bolognese</h1>
-						<p class="menu-item-description">
-							Italian lasagna with bolognese sauce.
-						</p>
-						<p class="menu-item-price">$12</p>
-					</div>
+				<div class="about-text">
+					Panquesitos is a brand of premium food created to deliver the best
+					dining experience for the customers
 				</div>
-				<div class="menu-card">
-					<img
-						class="menu-img"
-						src="./assets/images/33362787.png"
-						alt="Lasagna Bolognese"
-					/>
-					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagna Bolognese</h1>
-						<p class="menu-item-description">
-							Italian lasagna with bolognese sauce.
-						</p>
-						<p class="menu-item-price">$12</p>
-					</div>
-				</div>
-				<div class="menu-card">
-					<img
-						class="menu-img"
-						src="./assets/images/33362787.png"
-						alt="Lasagna Bolognese"
-					/>
-					<div class="menu-item-text">
-						<h1 class="menu-item-title">Lasagna Bolognese</h1>
-						<p class="menu-item-description">
-							Italian lasagna with bolognese sauce.
-						</p>
-						<p class="menu-item-price">$12</p>
-					</div>
+				<div class="about-img-container">
+					<img src="assets/images/pizza.jpg" alt="" class="about-img" />
+					<img src="assets/images/Fettuccine.jpg" alt="" class="about-img" />
+					<img src="assets/images/SpaghettiB.jpg" alt="" class="about-img" />
 				</div>
 			</div>
 		</div>
